@@ -1,6 +1,7 @@
 <?php
 //this script handle the user/android http requests.
 include_once 'includes/connection.php';
+require_once "includes/Training.php";
 
 $str=htmlspecialchars($_GET["order"]);
 //turn on boiler
@@ -45,23 +46,22 @@ $str=htmlspecialchars($_GET["order"]);
      }
  //enter schduled turn on
      else if($str == "newSchdule"){
+         $reg=new LinearRegression(30,50);
          $userId=htmlspecialchars($_GET["userId"]);
          $day=htmlspecialchars($_GET["day"]); //day in string exe: 'sunday'
          $showerTime=htmlspecialchars($_GET["showerTime"]);//time in string exe: '6:30 pm'
-         //duration will be taken from script,will be in seconds
-         $duration=htmlspecialchars($_GET["duration"]); //temp time
-         $showerTime= date('H:i:s', strtotime($showerTime));
-         $turnOnTime=htmlspecialchars($_GET["turnOnTime"]);
-         //$turnOnTime=date('H:i:s',strtotime("-$duration seconds",$showerTime)); //turn on time calculation
-         $turnOnTime= date('H:i:s', strtotime($turnOnTime)); //temp time
+         $duration=$reg->CalcDuration(); //duration calculated
+         $showerTime=date('H:i:s', strtotime($showerTime));
+         //$turnOnTime=htmlspecialchars($_GET["turnOnTime"]);
+         $turnOnTime=date('H:i:s',strtotime("-$duration seconds",$showerTime)); //turn on time calculation
+         //$turnOnTime= date('H:i:s', strtotime($turnOnTime)); //temp time
          $regular=htmlspecialchars($_GET["regular"]); //1 or 0
-         
-         $sql = "INSERT INTO users(userId,day,turnOnTime,duration,showrTime,regular) 
-         VALUES ('$userId','$day','$turnOnTime','$duration','$showrTime','$regular');";
-        $result=mysqli_query($conn,$sql);
-		if(!$result)
-			die("query faild");
-        else
+         // $sql = "INSERT INTO turnon(userId,day,turnOnTime,duration,showrTime,regular) 
+         // VALUES ('$userId','$day','$turnOnTime','$duration','$showrTime','$regular');";
+        // $result=mysqli_query($conn,$sql);
+		// if(!$result)
+			// die("query faild");
+        // else
             echo ("new Schdule was set!");
      }
 // get all the schdule 
